# template_fastapi_project

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
api/: __init__.py
api/v1/: api.py  users.py
core/: config.py  connections.py  dependencies.py  repository.py
migrations/: env.py
migrations/versions/: 56e3d986899c_.py  a7b9562028ff_.py
models/: users.py
repository/: users.py
schemas/: users.py
services/: users.py
